<resources>
    <!-- Other string resources-->

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <string-array name="name">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <string-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <string-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <string-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>


    <integer-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </integer-array>




    <string name="author_name">Galih</string>
    <string name="author_image">None</string>
    <string name="author_email">galihpri99@gmail.com</string>
    <string name="app_name">GitHub User</string>


    <string name="about">about</string>
    <string name="lighting">lighting</string>
    <string name="favorites">favorites</string>


    <string name="share_this_person">share</string>
    <string name="followers_label">Followers</string>
    <string name="following_label">Following</string>
    <string name="repository_label">Repositories</string>
    <string name="received">none</string>
    <string name="content_tab_text">bnvibvibveu</string>
    <string name="content_tab_home">fyeah</string>
    <string name="content_tab_profile">nieininininin</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>

    <string name="search_hint">Enter the name</string>
    <string name="search">Search</string>
    <string name="title">ijfiennenc</string>
    <string name="description">nienieniniec</string>
    <string name="write_your_review_here">jvnienienc</string>
    <string name="review">cniniinnice</string>
    <string name="send">cenceeincnec</string>
    <string name="search_view">search the usernames…</string>
    <string name="clip_search">fjednjovneso</string>
    <string name="repositories_labelling">repositories</string>
    <string name="followers_labelling">followers</string>
    <string name="following_labelling">following</string>
    <string name="fabby">makiru</string>
    <string name="button_fave">biebiebhiic</string>
    <string name="splash">sdbfibeifhcb</string>
    <string name="no_favorite_message">No favorite user is added yet</string>

</resources>


