<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:id="@+id/author_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:text="@string/author_name"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceHeadline3"
        android:textColor="@color/primary_front" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/author_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:contentDescription="@string/author_image"/>

    <TextView
        android:id="@+id/author_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:padding="16dp"
        android:text="@string/author_email"
        android:textAlignment="center"
        android:textColor="@color/primary_front"
        android:textSize="30sp"
        android:textStyle="italic" />

</LinearLayout>