<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/primary_front">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/fabby"
        android:src="@drawable/ic_baseline_favorite_border_24"
        android:backgroundTint="@color/primary_middle"
        app:backgroundTint="@color/primary_middle"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/allContents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tabs"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ProgressBar
            android:id="@+id/barProgressDetail"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/personDetailName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="cursive"
            android:paddingTop="25dp"
            android:paddingBottom="5dp"
            android:text="@array/name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/personDetailUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@array/username"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@id/personDetailName" />


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@id/personDetailUsername"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingStart="25dp"
            android:paddingEnd="25dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/personDetailAvatar"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center"
                        android:contentDescription="@array/avatar"
                        app:srcCompat="@drawable/user1"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <Button
                        android:id="@+id/action_share"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="casual"
                        android:text="@string/share_this_person"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/personDetailAvatar"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:backgroundTint="@color/primary_middle"
                        android:textColor="@color/white"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="0dp">

                <TableLayout
                    android:id="@+id/rightColumn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/personDetailRepository"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:paddingStart="15dp"
                            android:paddingTop="15dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="2.5dp"
                            android:text="@string/received"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/personDetailFollowers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:paddingStart="15dp"
                            android:paddingTop="15dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="2.5dp"
                            android:text="@string/received"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/personDetailFollowing"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:paddingStart="15dp"
                            android:paddingTop="15dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="2.5dp"
                            android:text="@string/received"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:paddingStart="15dp"
                            android:paddingTop="2.5dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="5dp"
                            android:text="@string/repositories_labelling"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:paddingStart="15dp"
                            android:paddingTop="2.5dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="5dp"
                            android:text="@string/followers_labelling"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:paddingStart="15dp"
                            android:paddingTop="2.5dp"
                            android:paddingEnd="15dp"
                            android:paddingBottom="5dp"
                            android:text="@string/following_labelling"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="11sp" />

                    </TableRow>

                </TableLayout>

                <TextView
                    android:id="@+id/personDetailLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:text="@string/received"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/rightColumn"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteX="20dp" />

                <TextView
                    android:id="@+id/personDetailCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="casual"
                    android:gravity="center"
                    android:paddingStart="15dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="20dp"
                    android:text="@string/received"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/personDetailLocation"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:layout_editor_absoluteX="20dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </TableRow>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_front"
        app:tabSelectedTextColor="@color/white"
        app:tabTextColor="@color/primary_middle"
        app:layout_constraintTop_toBottomOf="@id/allContents"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>